updated pr